# reid-task

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py  test_clipreid.py  train.py  train_clipreid.py
.dvc/: config
config/: defaults.py  defaults_base.py
configs/: config.yaml  constants.py
configs/VehicleID/: cnn_base.yml  cnn_clipreid.yml  vit_base.yml  vit_clipreid.yml
configs/dataset/: dukemtmcreid.yaml  market1501.yaml  msmt17.yaml  (+1 more)
data/: .gitignore  Market-1501-v15.09.15.dvc  additional_files.dvc
datasets/: bases.py  data.py  dukemtmcreid.py  graph_sampler.py  keypoint_test.txt  make_dataloader.py  make_dataloader_clipreid.py  market1501.py  msmt17.py  occ_duke.py  preprocessing.py  sampler.py  sampler_ddp.py  vehicleid.py  veri.py
lightning/: test.py
loss/: __init__.py  arcface.py  center_loss.py  clip_contrastive_loss.py  make_loss.py  metric_learning.py  softmax_loss.py  supcontrast.py  triplet_loss.py
model/: make_model.py  make_model_clipreid.py  model_pl.py  onnx_wrapper.py  train_logging.py
model_chkp/: CLIP-ReID_RN50_final.pth.dvc  CLIP-ReID_RN50_final_onnx_format.onnx.dvc  Market1501_CLIP-ReID_RN50_article.pth.dvc  RN50_stage1_60.pth.dvc  RN50_stage2-epoch=46-train_acc_stage2=0.9993.ckpt.dvc
processor/: processor.py  processor_clipreid_stage1.py  processor_clipreid_stage2.py
solver/: cosine_lr.py  lr_scheduler.py  make_optimizer_prompt.py  scheduler_factory.py
utils/: caption_parser.py  download_data.py  dvc_utils.py  export_onnx.py  iotools.py  logger.py  metrics.py  parquet_extractor.py  reranking.py
(+31 files in other folders)
